# metrics

./: cypher.txt  export.txt  pyproject.toml  read_file_relations.py  read_metrics.py  test.py
app_complexity/: consultas.sql  manage.py  metrics
app_complexity/app_complexity/: asgi.py  settings.py  urls.py  wsgi.py
app_complexity/app_metrics/: apps.py  models.py
app_complexity/app_metrics/management/commands/: generate_metrics.py
app_complexity/app_metrics/migrations/: 0001_initial.py  0002_filedependsonfile.py
py2neo/database/: work.py.b8f647eef7d8dadc09fd1bdfc30bc5fc.py
